load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

buildifier(name = "buildifier")

# gazelle:prefix github.com/uhthomas/6f.io
gazelle(name = "gazelle")

pkg_tar(
    name = "src",
    srcs = glob(["src/**"]) + [
        "@screensaver//:src",
        "@spectrum//:src",
    ],
    mode = "0444",
    package_dir = "/usr/share/nginx/html",
    remap_paths = {"external": ""},
    strip_prefix = "src",
)

container_image(
    name = "image",
    base = "@nginx//image",
    tars = [":src"],
)

docker_push(
    name = "push",
    image = ":image",
    registry = "ghcr.io",
    repository = "uhthomas/6f.io",
    tag = "{STABLE_GIT_COMMIT}",
)

docker_push(
    name = "push_tag",
    image = ":image",
    registry = "ghcr.io",
    repository = "uhthomas/6f.io",
    tag = "{STABLE_GIT_REF}",
)
